src/objects/Apttus_Config2__ProductDefaultValue__c.object
<CustomObject>
    <description>Represents the default values for a product</description>
    <fields>
        <fullName>Apttus_Config2__IncludeProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>D of the product group to include for the selected product or option</description>
        <label>Include Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Product Default Values (Include Product Group)</relationshipLabel>
        <relationshipName>IncludeProductDefaultValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product or option to include for the selected product</description>
        <label>IncludeProduct</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Default Values (Include Product)</relationshipLabel>
        <relationshipName>IncludeProductDefaultValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductDefaultRuleId__c</fullName>
        <description>ID of the associated rule</description>
        <label>Product Default Rule</label>
        <referenceTo>Apttus_Config2__ProductDefaultRule__c</referenceTo>
        <relationshipLabel>Default Values</relationshipLabel>
        <relationshipName>ProductDefaultValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Quantity__c</fullName>
        <description>The default quantity for the product or service</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingTerm__c</fullName>
        <description>The default selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The default value sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ValueType__c</fullName>
        <description>The value type. The Default value type is used to store defaults for the product/service. The Auto Include value type is used to indicate the product/service to be auto included.</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Auto Include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Default Value</label>
    <nameField>
        <displayFormat>DV-{0000000000}</displayFormat>
        <label>Default Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Default Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>